# qml-project-template

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_8md.html  annotated.html  annotated_dup.js  application_8cpp.html  application_8cpp__incl.map  application_8cpp__incl.md5  application_8h.html  application_8h.js  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  base_8h.html  base_8h.js  base_8h__dep__incl.map  base_8h__dep__incl.md5  base_8h__incl.map  base_8h__incl.md5  base_8h_source.html  classKeySequenceEditor-members.html  classKeySequenceEditor.html  classKeySequenceEditor.js  classKeySequenceEditor__coll__graph.map  classKeySequenceEditor__inherit__graph.md5  classKeySequenceEditor_a42e335b5ee6f3842328b2a1845526f35_icgraph.map  classKeySequenceEditor_a42e335b5ee6f3842328b2a1845526f35_icgraph.md5  classKeySequenceEditor_a9cd0a9658bb1963b598afd87c0ae6db0_cgraph.map  classKeySequenceEditor_a9cd0a9658bb1963b598afd87c0ae6db0_cgraph.md5  classKeySequenceEditor_ab6bdf43e6b9bc3f54de37095cf25f2d1_icgraph.map  classKeySequenceEditor_ab6bdf43e6b9bc3f54de37095cf25f2d1_icgraph.md5  classKeySequenceEditor_ad32ee01a5e7c4d5c6087b920650f2921_cgraph.map  classKeySequenceEditor_ad32ee01a5e7c4d5c6087b920650f2921_cgraph.md5  classKeySequenceEditor_ae0513df1612227c7c003181d2c83630c_icgraph.map  (+384 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/actions/setup_cache/: action.yml
.github/template/: README.md  template_name  template_repository
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  docker.yml  sonarqube-analysis.yml  template-janitor.yml
cmake/: AddCPack.cmake  AddCcache.cmake  AddClangTidy.cmake  AddCodeCoverage.cmake  AddCompilationFlags.cmake  AddDependencies.cmake  AddDocs.cmake  AddExecutable.cmake  AddInstallTargets.cmake  AddQtFiles.cmake  AddSanitizers.cmake  AddSourceFiles.cmake  AddTests.cmake  CPack.cmake  Cache.cmake  CompilationFlags.cmake  CompilerWarnings.cmake  Dependencies.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  Options.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Version.cmake
docker/gcc/: Dockerfile
docker/mingw/: Dockerfile  wine.sh
docs/: Doxyfile.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+29 more)
src/: CMakeLists.txt  application.cpp  application.h  config.h.in  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parameters.h  qt_log.h  qtquickcontrols2.conf  sentry.h  singleton.h  version.h
src/core/: CMakeLists.txt  application.cpp  application.h  base.h  logger.h  parameters.h  settings.cpp  settings.h  singleton.h
src/qml/: AboutDialog.qml  CMakeLists.txt  FpsCounter.qml  MenuBar.qml  OptionsDialog.qml  SettingsTab.qml  ShortcutRow.qml  ShortcutsTab.qml  StatusBar.qml  ToolBar.qml  ToolButton.qml  main.qml
src/quick/: CMakeLists.txt  keysequenceeditor.cpp  keysequenceeditor.h
tests/: CMakeLists.txt  tst_mytest.cpp  tst_settings.cpp
tests/gui/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  main.cpp  tst_mytest.cpp
